--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,54 @@
-- name: Setup Node
-    uses: actions/setup-node@v4
-    with:
-      node-version: '20'
-      # Removed cache: 'npm' because package-lock.json might be missing
+name: Deploy to GitHub Pages
 
-  - name: Install dependencies
-    run: npm install
-  
-  - name: Build
-    run: npm run build
-    env:
-      API_KEY: ${{ secrets.API_KEY }}
+on:
+  push:
+    branches:
+      - main
+      - master
+  workflow_dispatch:
 
-  - name: Upload artifact
-    uses: actions/upload-pages-artifact@v3
-    with:
-      path: ./dist
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          # Cache removed to prevent lock file errors on mobile uploads
+
+      - name: Install dependencies
+        run: npm install
+      
+      - name: Build
+        run: npm run build
+        env:
+          API_KEY: ${{ secrets.API_KEY }}
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./dist
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
