--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,29 @@
-{
-  "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "skipLibCheck": true,
+<change>
+<file>tsconfig.json</file>
+<description>Exclude vite config from main typescript compilation to prevent conflict errors</description>
+<content><![CDATA[{
+"compilerOptions": {
+"target": "ES2020",
+"useDefineForClassFields": true,
+"lib": ["ES2020", "DOM", "DOM.Iterable"],
+"module": "ESNext",
+"skipLibCheck": true,
+  /* Bundler mode */
+"moduleResolution": "bundler",
+"allowImportingTsExtensions": true,
+"resolveJsonModule": true,
+"isolatedModules": true,
+"noEmit": true,
+"jsx": "react-jsx",
 
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true
+/* Linting */
+"strict": true,
+"noUnusedLocals": false,
+"noUnusedParameters": false,
+"noFallthroughCasesInSwitch": true
   },
-  "include": ["./**/*.ts", "./**/*.tsx"],
-  "references": [{ "path": "./tsconfig.node.json" }]
-}
+"include": [".//*.ts", ".//*.tsx"],
+"exclude": ["node_modules", "vite.config.ts"],
+"references": [{ "path": "./tsconfig.node.json" }]
+}]]></content>
+</change>
